tests/invalid/simple/SetComprehension_CompileFail_2.whiley
void System::main([string] args):
    {int} zs
    int xs
    xs = 1
    zs = { x | y ∈ xs }
    print str(xs)
    print str(zs)
